--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,7 +329,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("/Template Restaurant/assets/images/hero.png") top center;
+  background: url("../images/hero.png") top center;
   background-size: cover;
   position: relative;
   padding: 10;
